--- a/lms/static/js_test.yml
+++ b/lms/static/js_test.yml
@@ -113,6 +113,9 @@ fixture_paths:
     - common/templates
     - teams/templates
     - support/templates
+    - js/fixtures/bookmarks
+    - templates/bookmarks
+    - templates/message_view.underscore
 
 requirejs:
   paths:
